--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-sort-bench"
+name = "csv-sort-bench"
 version = "0.1.0"
 edition = "2024"
 
@@ -11,3 +11,4 @@ csv = "1.3"
 rand = "0.8"
 fake = { version = "2.9", features = ["derive"] }
 chrono = "0.4"
+rfd = "0.15"
