Add unit tests for io module with tempfile-backed CSV I/O

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ rand = "0.8"
 fake = { version = "2.9", features = ["derive"] }
 chrono = "0.4"
 rfd = "0.15"
+
+[dev-dependencies]
+tempfile = "3"
